--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-				<configuration>
-					<testFailureIgnore> false </testFailureIgnore>
-					<suiteXmlFiles>
-						<suiteXmlFile>D:\Selenium Live Projects\TeamResolutionCheck\testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <!-- TestNG Suite XML files list for test execution -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>D:\Selenium Live Projects\TeamResolutionCheck\testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
 			</plugin>
 		</plugins>
 		<testResources>
